--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  height: 110px;
+  height: 85px;
   width: 100%;
   top: 0;
   left: 0;
@@ -55,7 +55,7 @@ body {
 .header .nav-menu {
   display: flex;
 padding-left: 30px;
-padding-top: 15px;
+padding-top: 0px;
 }
 
 .header .nav-item {
@@ -68,7 +68,7 @@ padding-top: 15px;
   border-bottom: 3px solid #a51720;
 } */
 .header .nav-menu a:hover {
-  padding-bottom: 12px;
+  padding-bottom: 10px;
   border-bottom: 3px solid #a51720;
 
 }
@@ -115,8 +115,8 @@ padding-top: 15px;
     z-index: 999;
     text-align: center;
     transition: 0.3s;
-/*     box-shadow: 0px 15px 7px -17px #111;
- */  }
+     box-shadow: 0px 15px 10px -20px #111;
+   }
 
   .nav-menu.active {
     left: 0;
@@ -141,5 +141,5 @@ padding-top: 15px;
 
 .navlogo
 {
-  margin-top: 20px;
+  margin-top: 5px;
 }
