--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -625,9 +625,15 @@ iframe {
   }
   .clsHomeGallery .galleryWrap{
     gap: 10px!important;
+  }  
+  .clsContact{
+    padding-bottom: 60px!important;
   }
 }
 @media screen and (max-width: 375px) {
+  .clshomecontact{
+  background-position: center bottom 65px!important;
+}
   .clsReachTxt{
     font-size: 18px;
   }
